--- a/PacManUnity/config/bc.yaml
+++ b/PacManUnity/config/bc.yaml
@@ -1,5 +1,4 @@
-behaviors:
-    joe:
+default_settings:
       trainer_type: ppo
       hyperparameters:
         batch_size: 10
@@ -20,12 +19,9 @@ behaviors:
         extrinsic:
           gamma: 0.99
           strength: 0.5
-        gail:
-          strength: 0.5
-          demo_path: behaviorCloning/bc1.demo
-      behavior_cloning:
-        strength: 1
-        demo_path: behaviorCloning/bc1.demo
-      max_steps: 500000
+      behavioral_cloning:
+        strength: 1.0
+        demo_path: PacManUnity/Assets/Demonstrations/BlinkyRecording.demo
+      max_steps: 1000000
       time_horizon: 64
-      summary_freq: 10000
+      summary_freq: 1000
