--- a/PacManUnity/config/bc.yaml
+++ b/PacManUnity/config/bc.yaml
@@ -20,10 +20,11 @@ default_settings:
           gamma: 0.99
           strength: 1.0
         gail:
-          strength: 0.01
+          strength: 0.3
           demo_path: PacManUnity/Assets/Demonstrations/BlinkyRecording.demo
       behavioral_cloning:
         strength: 0.5
+        steps: 0
         demo_path: PacManUnity/Assets/Demonstrations/BlinkyRecording.demo
       max_steps: 1000000
       time_horizon: 64
